<resources>
    <string name="app_name">ALFRED</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_users">Users</string>
    <string name="title_people">People</string>
    <string name="title_plates">Plates</string>
    <string name="welcomeUser">Welcome ...User...</string>
    <string name="videoInfo">View your home video feed below</string>
    <string name="notificationsCheck">Turn on Notifications</string>
    <string name="takePhoto">Take Photo</string>
    <string name="openDoor">Open Door</string>
    <string name="stopRecording">Stop Recording</string>
    <string name="allUsrTxt">All Users</string>
    <string name="userinfo">People Listed below have access to your homes security feed. Here you can view users, add users and delete users.</string>
    <string name="addUser">Add User</string>
    <string name="updateMyInfo">Update My Info</string>
    <string name="savedFace">Saved Faces</string>
    <string name="savedFaceInfo">Below are people who have been recognised and stored.</string>
    <string name="unknownFace">Unknown Faces</string>
    <string name="unknownFaceInfo">The images stored here have yet to be identified.</string>
    <string name="notificationsSwitch">Notificatoins are on for unknown faces.</string>
    <string name="savedCar">Saved Number Plates</string>
    <string name="savedCarInfo">Listed below are all of the number plates that have been identified and the car owners name.</string>
    <string name="unknownCar">Unknown Number Plates</string>
    <string name="unknownCarInfo">The number plates listed below have not been assigned a car owner yet.\nPlease fill in when known.</string>
</resources>
